# TABMON-Classification-Pipeline

./: .gitignore  PLANNING.md  README.md  analyze.py  base_map.html  dirichlet.py  embeddings.sh  generate_sbatch_for_parallel_inference.py  generate_sbatch_missed_recordings.py  generate_sbatch_resume_jobs.py  generate_test_db.py  inference.sh  inference_missed_files.sh  inference_parallel.py  loader.py  lock_database.py  merge_parquetfiles.py  merge_parquetfiles.sh  merge_partitioned.py  parallel_inference.sbatch  parallel_inference.sh  pipeline_old.py  polygon_map.html  pyproject.toml  requirements.txt  resume_jobs.sh  run_database.sh  train.sh  wb.py
AvesEcho/: models.py
PaSST/: dataset.py  run.py
SDM/: NS_example.py  SDM.md  example.py  folium_example.py  new.py  polygon_example.py  raster_example.py  tabmon_country_boundries.geojson
acoustic_indices/: compute_acoustic_indices.py  config_haupert_2025.yaml  generate_sbatch_acoustic_indices.py  run_acoustic_indices.sh
app/: database.db-journal  database.py  file_utils.py  main.py  schema.py  services.py
audio/: audio.md  loader.py
chunk_files/: file_chunks_0.txt  file_chunks_1.txt  file_chunks_2.txt  file_chunks_3.txt  file_chunks_4.txt  file_chunks_5.txt  file_chunks_6.txt
chunk_files_2025-03-11/: file_chunks_0.txt  file_chunks_1.txt  file_chunks_2.txt  file_chunks_3.txt
cloud/: app.py  main.py
models/: model.py  models.md
original/: algorithm_mode.py  analyze.py  annotation_split.csv  check.py  comparison.py  config.yml  database.py  dataset.py  embeddings.py  embeddings_old.py  inference.py  (+7 more)
(+74 files in other folders)
