[project]
name = "tabmon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "duckdb==1.2.2",
    "etils==1.7.0",
    "faiss-cpu==1.9.0.post1",
    "fastapi[standard]==0.115.7",
    "fastparquet==2024.11.0",
    "importlib-resources==6.4.0",
    "librosa==0.10.2.post1",
    "mgrs==1.4.6",
    "numpy==1.26.3",
    "pandas==2.2.2",
    "pyarrow==19.0.1",
    "pydantic==2.10.6",
    "python-dotenv>=1.2.1",
    "resampy==0.4.3",
    "scikit-maad==1.4.3",
    "soundfile==0.12.1",
    "sqlalchemy==2.0.37",
    "timm==0.6.13",
    "torch==2.2.1",
    "torchaudio==2.2.1",
    "torchmetrics==1.4.0.post0",
    "torchvision==0.17.1",
    "tqdm==4.66.3",
    "umap-learn==0.5.7",
    "wandb==0.18.5",
    "tensorflow-intel==2.14.1; sys_platform == 'win32'",
    "tensorflow==2.14.1; sys_platform != 'win32'",
    "tensorflow-io-gcs-filesystem==0.31.0; sys_platform == 'win32'",
    "static-ffmpeg>=3.0",
    "pydub>=0.25.1",
    "matplotlib==3.9.2",
    "scikit-learn==1.5.2",
]
